# Mini-Redis

./: CMakeLists.txt  README.md
include/: Command.h  CommandSons.h  Database.h  Parser.h  Persistence.h
src/: CommandSons.cpp  Database.cpp  Parser.cpp  Persistence.cpp  main.cpp
tests/: test_mini_redis_200.sh  test_report_200.txt
